--- a/lab2/lab2.test/lab2.test.csproj
+++ b/lab2/lab2.test/lab2.test.csproj
@@ -20,4 +20,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\lab2\lab2.csproj" />
+  </ItemGroup>
+
 </Project>
